--- a/web/viewer.html
+++ b/web/viewer.html
@@ -60,6 +60,7 @@ See https://github.com/adobe-type-tools/cmap-resources
     <script src="../src/display/webgl.js"></script>
     <script src="../src/display/pattern_helper.js"></script>
     <script src="../src/display/font_loader.js"></script>
+    <script src="../src/display/dom_utils.js"></script>
     <script src="../src/display/annotation_helper.js"></script>
     <script>PDFJS.workerSrc = '../src/worker_loader.js';</script>
 <!--#endif-->
