--- a/examples/helloworld/index.html
+++ b/examples/helloworld/index.html
@@ -4,16 +4,17 @@
 <head>
   <!-- In production, only one script (pdf.js) is necessary -->
   <!-- In production, change the content of PDFJS.workerSrc below -->
+  <script src="../../src/shared/global.js"></script>
+  <script src="../../src/display/dom_utils.js"></script>
   <script src="../../src/shared/util.js"></script>
-  <script src="../../src/display/api.js"></script>
+  <script src="../../src/display/annotation_layer.js"></script>
+  <script src="../../src/display/font_loader.js"></script>
   <script src="../../src/display/metadata.js"></script>
-  <script src="../../src/display/canvas.js"></script>
+  <script src="../../src/display/text_layer.js"></script>
   <script src="../../src/display/webgl.js"></script>
   <script src="../../src/display/pattern_helper.js"></script>
-  <script src="../../src/display/font_loader.js"></script>
-  <script src="../../src/display/dom_utils.js"></script>
-  <script src="../../src/display/annotation_layer.js"></script>
-  <script src="../../src/display/text_layer.js"></script>
+  <script src="../../src/display/canvas.js"></script>
+  <script src="../../src/display/api.js"></script>
 
   <script>
     // Specify the main script used to create a new PDF.JS web worker.
