--- a/test/test_slave.html
+++ b/test/test_slave.html
@@ -18,16 +18,17 @@ limitations under the License.
   <head>
     <title>PDF.js test slave</title>
     <meta charset="utf-8">
+    <script src="../src/shared/global.js"></script>
+    <script src="../src/display/dom_utils.js"></script>
     <script src="../src/shared/util.js"></script>
-    <script src="../src/display/api.js"></script>
+    <script src="../src/display/annotation_layer.js"></script>
+    <script src="../src/display/font_loader.js"></script>
     <script src="../src/display/metadata.js"></script>
-    <script src="../src/display/canvas.js"></script>
+    <script src="../src/display/text_layer.js"></script>
     <script src="../src/display/webgl.js"></script>
     <script src="../src/display/pattern_helper.js"></script>
-    <script src="../src/display/font_loader.js"></script>
-    <script src="../src/display/dom_utils.js"></script>
-    <script src="../src/display/annotation_layer.js"></script>
-    <script src="../src/display/text_layer.js"></script>
+    <script src="../src/display/canvas.js"></script>
+    <script src="../src/display/api.js"></script>
     <script src="driver.js"></script>
   </head>
   <body>
