Move the sidebar related code from viewer.js into `PDFSidebar`
The sidebar code has, except for minor fixes/additions (such as attachments), been largely untouch for years.
To avoid having a bunch of sidebar code sprinkled throughout viewer.js, this patch moves the sidebar code into a separate file (pdf_sidebar.js), similar to how most other functionality has been moved in the last few years.

Besides simply moving code around, this patch also has the added benefit that we now keep track of the sidebar state (not just opened/closed).
This now makes it possible to handle both `Preferences` *and* `ViewHistory` settings for the sidebar state in a cleaner way, preventing strange and confusing interactions between the two.

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -74,6 +74,7 @@ See https://github.com/adobe-type-tools/cmap-resources
     <script src="pdf_viewer.js"></script>
     <script src="pdf_thumbnail_view.js"></script>
     <script src="pdf_thumbnail_viewer.js"></script>
+    <script src="pdf_sidebar.js"></script>
     <script src="pdf_outline_viewer.js"></script>
     <script src="pdf_attachment_viewer.js"></script>
     <script src="pdf_find_bar.js"></script>
