--- a/test/unit/unit_test.html
+++ b/test/unit/unit_test.html
@@ -37,6 +37,7 @@
   <script src="cmap_spec.js"></script>
   <script src="annotation_layer_spec.js"></script>
   <script src="network_spec.js"></script>
+  <script src="dom_utils_spec.js"></script>
 
   <script>
     'use strict';
@@ -50,11 +51,11 @@
           'pdfjs/core/fonts', 'pdfjs/core/ps_parser', 'pdfjs/core/function',
           'pdfjs/core/parser', 'pdfjs/core/evaluator', 'pdfjs/core/cmap',
           'pdfjs/core/worker', 'pdfjs/core/network', 'pdfjs/display/api',
-          'pdfjs/display/metadata'],
+          'pdfjs/display/metadata', 'pdfjs/display/dom_utils'],
           function (sharedUtil, sharedGlobal, corePrimitives, coreAnnotation,
                     coreCrypto, coreStream, coreFonts, corePsParser, coreFunction,
-                    coreParser, coreEvaluator, coreCMap, coreWorker,
-                    coreNetwork, displayAPI, displayMetadata) {
+                    coreParser, coreEvaluator, coreCMap, coreWorker, coreNetwork,
+                    displayAPI, displayMetadata, displayDOMUtils) {
 
         pdfjsLibs = {
           sharedUtil: sharedUtil,
@@ -72,7 +73,8 @@
           coreWorker: coreWorker,
           coreNetwork: coreNetwork,
           displayAPI: displayAPI,
-          displayMetadata: displayMetadata
+          displayMetadata: displayMetadata,
+          displayDOMUtils: displayDOMUtils
         };
 
         // Expose all loaded internal exported members to global scope.
