Support syncing of settings in Chrome extension
Use chrome.storage.sync to store preferences instead of
chrome.storage.local, to allow settings to be synchronized if the user
chooses to sign in in Chrome and enables synchronization of extension
preferences.

--- a/extensions/chromium/pdfHandler.html
+++ b/extensions/chromium/pdfHandler.html
@@ -15,6 +15,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <script src="feature-detect.js"></script>
+<script src="options/migration.js"></script>
 <script src="preserve-referer.js"></script>
 <script src="pdfHandler.js"></script>
 <script src="extension-router.js"></script>
